force-app/main/default/objects/Product_transfer_line__c/Product_transfer_line__c.object-meta.xml
<CustomObject>
    <label>Product Transfer Line</label>
    <nameField>
        <displayFormat>PTL-{0000000}</displayFormat>
        <label>Product Transfer Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Transfer Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>