force-app/main/default/objects/Product_transfer_line__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset.</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset__c.Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Product Transfer Lines</relationshipLabel>
    <relationshipName>Product_Transfer_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>