force-app/main/default/objects/Product_transfer_line__c/fields/Inventory_Destination_Loc__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Destination_Loc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory_Destination_Loc</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Product Transfer Lines (Inventory_recordId_To)</relationshipLabel>
    <relationshipName>Product_Transfer_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>