force-app/main/default/objects/Product_transfer_line__c/fields/Inventory_Source_Loc__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Source_Loc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory_Source_Loc</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Product Transfer Lines</relationshipLabel>
    <relationshipName>Product_Transfer_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>