force-app/main/default/objects/Product_transfer_line__c/fields/IsEnough__c.field-meta.xml
<CustomField>
    <fullName>IsEnough__c</fullName>
    <formula>if(RecordType.DeveloperName &lt;&gt; &quot;Input Quantity&quot;,False,
 Quantity__c &lt;= Inventory_Source_Loc__r.Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEnough</label>
    <type>Checkbox</type>
</CustomField>