force-app/main/default/objects/Product_transfer_line__c/fields/IsVRBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsVRBypassed__c</fullName>
    <description>Flow can bypass the validation rule if you assign field 
&quot;ValidationBypassDatetime__c&quot; = Current Date/time to this record in that flow
https://admin.salesforce.com/blog/2022/how-i-solved-it-bypass-validation-rules-in-flows</description>
    <formula>BLANKVALUE(ValidationBypassDatetime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVRBypassed</label>
    <type>Checkbox</type>
</CustomField>