force-app/main/default/objects/Product_transfer_line__c/fields/Original_PTL__c.field-meta.xml
<CustomField>
    <fullName>Original_PTL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original PTL</label>
    <referenceTo>Product_transfer_line__c</referenceTo>
    <relationshipLabel>Product Transfer Lines</relationshipLabel>
    <relationshipName>Product_Transfer_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>