force-app/main/default/objects/Product_transfer_line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product.</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Inventory management is not enable for this product</errorMessage>
        <filterItems>
            <field>Product__c.Enable_Inventory_management__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Transfer Lines</relationshipLabel>
    <relationshipName>Product_transfer_line</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>