force-app/main/default/objects/Product_transfer_line__c/fields/Product_transfer__c.field-meta.xml
<CustomField>
    <fullName>Product_transfer__c</fullName>
    <label>Product Transfer.</label>
    <referenceTo>Product_transfer__c</referenceTo>
    <relationshipLabel>Product Transfer Lines</relationshipLabel>
    <relationshipName>Product_transfer_line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>