force-app/main/default/objects/Product_transfer_line__c/fields/ValidationBypassDatetime__c.field-meta.xml
<CustomField>
    <fullName>ValidationBypassDatetime__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>ValidationBypassDatetime</label>
    <type>DateTime</type>
</CustomField>