force-app/main/default/objects/Product_transfer_line__c/recordTypes/Input_Quantity.recordType-meta.xml
<RecordType>
    <fullName>Input_Quantity</fullName>
    <active>true</active>
    <label>Input Quantity</label>
</RecordType>