force-app/main/default/objects/Product_transfer_line__c/recordTypes/Input_Serial_Number.recordType-meta.xml
<RecordType>
    <fullName>Input_Serial_Number</fullName>
    <active>true</active>
    <label>Input Serial Number</label>
</RecordType>