force-app/main/default/objects/Product_transfer_line__c/recordTypes/Select_Asset.recordType-meta.xml
<RecordType>
    <fullName>Select_Asset</fullName>
    <active>true</active>
    <label>Select Asset</label>
</RecordType>