force-app/main/default/objects/Product_transfer_line__c/validationRules/Input_asset_on_serialized_product.validationRule-meta.xml
<ValidationRule>
    <fullName>Input_asset_on_serialized_product</fullName>
    <active>false</active>
    <description>Product is serialized then user should input asset field</description>
    <errorConditionFormula>Product__r.Enable_Serialized_Inventory__c
&amp;&amp; not(isnull(Quantity__c ))
&amp;&amp; !IsVRBypassed__c</errorConditionFormula>
    <errorDisplayField>Asset__c</errorDisplayField>
    <errorMessage>Product is serialized, please input asset field and leave quantity field blank</errorMessage>
</ValidationRule>