force-app/main/default/objects/Product_transfer_line__c/validationRules/Input_quantity_on_non_serialized_product.validationRule-meta.xml
<ValidationRule>
    <fullName>Input_quantity_on_non_serialized_product</fullName>
    <active>false</active>
    <description>Product is non-serialized then user should input quantity field</description>
    <errorConditionFormula>Not(Product__r.Enable_Serialized_Inventory__c) 
&amp;&amp; isnull( Asset__c )
&amp;&amp; !IsVRBypassed__c</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Product is non-serialized, please input quantity field and leave asset field blank</errorMessage>
</ValidationRule>