force-app/main/default/objects/Product_transfer_line__c/validationRules/No_add_or_change_Product_transfer_line.validationRule-meta.xml
<ValidationRule>
    <fullName>No_add_or_change_Product_transfer_line</fullName>
    <active>false</active>
    <errorConditionFormula>Product_transfer__r.IsLocked__c</errorConditionFormula>
    <errorMessage>No add or change Product transfer line when Product transfer is locked</errorMessage>
</ValidationRule>